Fix dark mode transition + improved design

--- a/style/tailwind.css
+++ b/style/tailwind.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .btn-primary {
+        @apply rounded-lg bg-slate-400 dark:bg-cerulean-blue-700 hover:bg-blue-400 dark:hover:bg-cerulean-blue-600 select-none shadow-sm fade-dark;
+    }
+
+    .fade-dark {
+        @apply transition-colors duration-200;
+    }
+}
